[package]
name = "nukedns"
version = "0.1.0"
authors = ["Tom <mr@tomclement.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-proto = "0.20.0"
trust-dns-client = "0.20.0"
trust-dns-server = "0.20.0"
tokio = { version = "1.0.1", features = ["full"] }
